tests/ui/use_outside.rs
#[decycle::decycle]
use core::fmt::Debug;

fn main() {}
